*SVN*

* Fixed incompatibility with Base#find with an array of ids that would fail when using eager loading #1186 [Alisdair McDiarmid]

* Fixed that validate_length_of lost :on option when :within was specified #1195 [jhosteny@mac.com]

* Added encoding and min_messages options for PostgreSQL #1205 [shugo]. Configuration example:

    development:
      adapter: postgresql
      database: rails_development
      host: localhost
      username: postgres
      password:
      encoding: UTF8
      min_messages: ERROR

* Fixed acts_as_list where deleting an item that was removed from the list would ruin the positioning of other list items #1197 [Jamis Buck]

* Added validates_exclusion_of as a negative of validates_inclusion_of

* Optimized counting of has_many associations by setting the association to empty if the count is 0 so repeated calls doesn't trigger database calls


*1.10.1* (20th April, 2005)

* Fixed frivilous database queries being triggered with eager loading on empty associations and other things

* Fixed order of loading in eager associations

* Fixed stray comma when using eager loading and ordering together from has_many associations #1143


*1.10.0* (19th April, 2005)

* Added eager loading of associations as a way to solve the N+1 problem more gracefully without piggy-back queries. Example:

    for post in Post.find(:all, :limit => 100)
      puts "Post:            " + post.title
      puts "Written by:      " + post.author.name
      puts "Last comment on: " + post.comments.first.created_on
    end
  
  This used to generate 301 database queries if all 100 posts had both author and comments. It can now be written as:
  
    for post in Post.find(:all, :limit => 100, :include => [ :author, :comments ])
 
  ...and the number of database queries needed is now 1.

* Added new unified Base.find API and deprecated the use of find_first and find_all. See the documentation for Base.find. Examples:
